[gd_scene load_steps=2 format=3 uid="uid://1sqtn7ql445i"]

[ext_resource type="Script" uid="uid://c5uc7pug1bcuf" path="res://scripts/option_menu.gd" id="1_hecwe"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hecwe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Volume:"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music:"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXVolume" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX:"

[node name="SFX Volume" type="HSlider" parent="Panel/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fullscreen:"

[node name="Fullscreen" type="CheckBox" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="Panel/VBoxContainer/SFXVolume/SFX Volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
